--- a/report/intro.tex
+++ b/report/intro.tex
@@ -4,5 +4,7 @@
 Wir beginnen mit einer weiterf\"uhrenden Beschreibung des Anwendungsszenarios und den getroffenen Annahmen in Abschnitt \ref{sec:setting}.
 Darauf folgt Abschnitt \ref{sec:features} mit der Spezifikation der funktionalen Anforderungen.
 Abschnitt \ref{sec:algo} besch\"aftigt behandelt das entwickelte Protokoll.
-Abschnitt \ref{sec:impl} und \ref{sec:ana} \textbf{beschreibt robert}.
+In Abschnitt \ref{sec:impl} wird die Implementierung der Simulation erläutert und anschließend in Abschnitt \ref{sec:ana} mit Bezug auf die funktionalen Anforderungen analysiert.
+
+
 Als letztes werden in Abschnit \ref{sec:futwork} Ans\"atze f\"ur zuk\"unftige Arbeit erw\"ahnt, und in Abschnitt \ref{sec:conclusion} ein Fazit gezogen.
