--- a/report/report.tex
+++ b/report/report.tex
@@ -47,7 +47,7 @@
 \input{features}
 \input{algo}
 \input{implementation}
-\input{analysis}
+% \input{analysis}
 \input{futurework}
 
 \end{document}
