insert Matrix quote here

--- a/report/implementation.tex
+++ b/report/implementation.tex
@@ -43,7 +43,7 @@ den neuen Sensorknoten beim Äther; anschließend kann dieser gestartet
 Die simulierten Sensorknoten kommunizieren untereinander nur über
 Nachrichten. Den (virtuellen) Versandt der Nachrichten übernimmt der
 simulierte Äther, implementiert als Modul
-(http://yuiblog.com/blog/2007/06/12/module-pattern/) ``MoteList'' in der
+\footnote{\url{http://yuiblog.com/blog/2007/06/12/module-pattern/}} ``MoteList'' in der
 Datei motelist.js.
 
 Ähnlich dem Observer-Entwurfsmuster stellt MoteList eine Methode
