--- a/report/futurework.tex
+++ b/report/futurework.tex
@@ -1,5 +1,5 @@
 \section{Future Work} \label{sec:futwork}
-Die zur Verf\"ugung gestellte Implementierung des beschriebenen Protokolls erf\"ullt die funktionalen Anforderungen im vollen Ma\ss e.
+Die zur Verf\"ugung gestellte Implementation des beschriebenen Protokolls erf\"ullt die funktionalen Anforderungen im vollen Ma\ss e.
 Um aber den Einsatz des Protokolles realistischer zu machen, ist noch Arbeit an den Annahmen aus Abschnitt \ref{sec:setting} n\"otig.
 So w\"are s m\"oglich das Protokoll um die M\"oglichkeit zu erweitern mehreren Sensorknoten zu erlauben gleichzeitig einem Cluster beizutreten.
 Dies w\"are zum Beispiel realisierbar, in dem der Clusterhead bei einem schon laufenden join-Vorgang blockiert, und der Sensorknoten wartet und danach erneut versucht dem Cluster beizutreten.
