--- a/report/intro.tex
+++ b/report/intro.tex
@@ -7,4 +7,4 @@ Abschnitt \ref{sec:algo} besch\"aftigt behandelt das entwickelte Protokoll.
 In Abschnitt \ref{sec:impl} wird die Implementierung der Simulation erläutert und anschließend in Abschnitt \ref{sec:ana} mit Bezug auf die funktionalen Anforderungen analysiert.
 
 
-Als letztes werden in Abschnit \ref{sec:futwork} Ans\"atze f\"ur zuk\"unftige Arbeit erw\"ahnt, und in Abschnitt \ref{sec:conclusion} ein Fazit gezogen.
+Abschließend werden in Abschnit \ref{sec:futwork} Ans\"atze f\"ur zuk\"unftige Arbeit erw\"ahnt, und in Abschnitt \ref{sec:conclusion} ein Fazit gezogen.
